
SVN
---

XML:   Resolved issue CASTOR-1489 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for abstract <complexType> definitions.
       Details: http://jira.codehaus.org/browse/CASTOR-1489
       (Werner - 20060824)

JDO:   Resolved issue CASTOR-1471 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for Progress.
       Details: http://jira.codehaus.org/browse/CASTOR-1471
       (Werner - 20060823)

XML:   Resolved issue CASTOR-1509 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactored Marshaller to allow instantiation through default constructor (setting 
       Writer through setWriter()).
       Details: http://jira.codehaus.org/browse/CASTOR-1509
       (Werner - 20060823)

JDO:   Resolved issue CASTOR-1506 using contribution from Emir Causevic [emircaus@bih.net.ba]
       Restructured mapping syntax for named queries.
       Details: http://jira.codehaus.org/browse/CASTOR-1506
       (Werner - 20060823)

XML:   Resolved issue CASTOR-1493 using contribution from Simeon de Dios [sdedios@lehman.com]
       Fixed problem with wrong class names for elements of named complexType which are unbounded choice.
       Details: http://jira.codehaus.org/browse/CASTOR-1493
       (Werner - 20060822)

All:   Resolved issue CASTOR-1492 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added XML best practise document.
       Details: http://jira.codehaus.org/browse/CASTOR-1492
       (Werner - 20060820)

All:   Resolved issue CASTOR-1500 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with including all required class files in XML JAR.
       Details: http://jira.codehaus.org/browse/CASTOR-1500
       (Werner - 20060818)

XML:   Resolved issue CASTOR-1499 using contribution from Emir Causevic [emircaus@bih.net.ba]
       Added support for named queries at the <class> level.